[project]
name = "first-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Eldar Zhamilev",email = "waxenov@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"